# Chessire

./: .gitignore  .prettierignore  Cargo.toml  LICENSE  README.md  gulpfile.mjs  package-lock.json  package.json
core/: Cargo.toml  core.rs
core/evaluation/: classic.rs  count.rs  mod.rs
core/search/: alphabeta.rs  memoized.rs  mod.rs  mtd.rs  negamax.rs  negascout.rs
interface/: index.html  script.js  style.css
interface/boards/: boards.css
interface/pieces/: pieces.css
interface/pieces/merida/: merida.css
wasm/: Cargo.toml  game.rs  strategy.rs  util.rs  wasm.rs
