[package]
name = "chessire-wasm"
version = "0.1.0"
authors = ["Simon Meskens <meskens.simon@gmail.com>", "Michael Lamparski <diagonaldevice@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]
path = "wasm.rs"

[dependencies]
chessire-core = { path = "../core" }

chess = "3.1.1"

wasm-bindgen = "0.2.65"
js-sys = "0.3.42"

# use custom wasm-glue?

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

[dependencies.web-sys]
version = "0.3.42"
features = [ "console" ]
